--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
-            android:textSize="14sp"
+            android:textSize="16sp"
+            android:background="@color/placeNameBack"
             android:text="here"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -40,7 +41,8 @@
             android:layout_margin="1dp"
             android:text="address"
             android:textSize="14sp"
-            android:textColor="@color/black"
+            android:background="@color/placeAddressBack"
+            android:textColor="@color/darkGray"
             />
 
     </LinearLayout>
