--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,13 +27,13 @@
 
     <style name="MyPreference" parent="Theme.AppCompat">
         <item name="title">설정</item>
-        <item name="titleTextColor">#1EC2F4</item>  // title bar text color
+        <item name="titleTextColor">#0B7697</item>  // title bar text color
         <item name="colorPrimary">#77A5D3</item>    // title bar background color
-        <item name="android:colorBackground">#77A5D3</item> // setting screen background
+        <item name="android:colorBackground">#093765</item> // setting screen background
 
         <item name="colorAccent">#FFFF00</item> // category, switch button color
 
-        <item name="android:textColor">#045E04</item>   // key title color
+        <item name="android:textColor">#DFCB32</item>   // key title color
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
         <item name="colorSecondary">#E4C5C4</item>    //
