--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="placeAddressBack">#80C0D2D5</color>
 
     <color name="setBack">#DFDC07</color>
-    <color name="infoColor">#FFFFFC3B</color>
+    <color name="infoColor">#F7EACB</color>
     <color name="xorColor">#ccCAD8AA</color>
 
 </resources>
