--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,18 +13,6 @@
         <item name="android:width">38dp</item>
     </style>
 
-    <style name="scrollbar_shape_style">
-        <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
-        <item name="android:scrollbarStyle">outsideOverlay</item>
-        <item name="android:scrollbars">vertical</item>
-        <item name="android:fadeScrollbars">true</item>
-        <item name="android:scrollbarThumbVertical">@drawable/scrollbar_vertical_thumb</item>
-        <item name="android:scrollbarTrackVertical">@drawable/scrollbar_vertical_track</item>
-        <item name="android:scrollbarSize">4dp</item>
-        <item name="android:scrollbarFadeDuration">2000</item>
-        <item name="android:scrollbarDefaultDelayBeforeFade">1000</item>
-    </style>
-
     <style name="MyPreference" parent="Theme.AppCompat">
         <item name="title">설정</item>
         <item name="titleTextColor">#0B7697</item>  // title bar text color
@@ -40,4 +28,13 @@
         <item name="colorPrimarySurface">#5C0606</item>
         // summary color variable not known
     </style>
+
+    <style name="up_down_scroll_thumb">
+        <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
+        <item name="android:scrollbarStyle">outsideOverlay</item>
+        <item name="android:scrollbars">vertical</item>
+        <item name="android:fadeScrollbars">false</item>
+        <item name="android:scrollbarThumbVertical">@drawable/up_down</item>
+    </style>
+
 </resources>
